--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -109,14 +109,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(<class 'ZeroDivisionError'>, ZeroDivisionError('division by zero'), <traceback object at 0x107950100>)\n",
+      "2\n",
+      "/var/folders/h2/3x45q2m52n16_c6b_5lbfbjc0000gn/T/ipykernel_18768/1297845230.py\n",
       "division by zero\n"
      ]
     }
@@ -126,7 +127,10 @@
     "    a = 1/0\n",
     "\n",
     "except Exception as e:\n",
-    "    print(sys.exc_info())\n",
+    "    _,_,exc_tb=sys.exc_info()\n",
+    "    print(exc_tb.tb_lineno)\n",
+    "    print(exc_tb.tb_frame.f_code.co_filename)\n",
+    "    \n",
     "    print(e)"
    ]
   },
