--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -19,7 +19,7 @@
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2023, 10, 29, 9, 55, 38, 231106)"
+       "datetime.datetime(2023, 11, 4, 9, 35, 57, 658366)"
       ]
      },
      "execution_count": 2,
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
      "output_type": "stream",
      "text": [
       "2\n",
-      "/var/folders/h2/3x45q2m52n16_c6b_5lbfbjc0000gn/T/ipykernel_18768/1297845230.py\n",
+      "/var/folders/h2/3x45q2m52n16_c6b_5lbfbjc0000gn/T/ipykernel_4585/1297845230.py\n",
       "division by zero\n"
      ]
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,16 +150,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'e' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/asitpiri/Documents/DataScience/FSDSEndToEnd/notebooks/research.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/asitpiri/Documents/DataScience/FSDSEndToEnd/notebooks/research.ipynb#X13sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mraise\u001b[39;00m customexception(e, sys)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'e' is not defined"
+     ]
+    }
+   ],
    "source": [
     "raise customexception(e, sys)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +180,7 @@
        "(None, None, None)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
